htmlprose.rb
# Autogenerated from a Treetop grammar. Edits may be lost.


module HtmlProse
  include Treetop::Runtime

  def root
    @root ||= :statement
  end

  def _nt_statement
    puts "statement #{node_cache[:statement]}"
    start_index = index
    if node_cache[:statement].has_key?(index)
      cached = node_cache[:statement][index]
      if cached
        cached = SyntaxNode.new(input, index...(index + 1)) if cached == true
        @index = cached.interval.end
      end
      return cached
    end

    i0 = index
    r1 = _nt_comment
    if r1
      r0 = r1
    else
      r2 = _nt_askforelement
      r2.extend(Statement)
      if r2
        r0 = r2
      else
        @index = i0
        r0 = nil
      end
    end

    node_cache[:statement][start_index] = r0

    r0
  end

  module Comment0
  end

  def _nt_comment
    puts "comment #{node_cache[:statement]}"
    start_index = index
    if node_cache[:comment].has_key?(index)
      cached = node_cache[:comment][index]
      if cached
        cached = SyntaxNode.new(input, index...(index + 1)) if cached == true
        @index = cached.interval.end
      end
      return cached
    end

    i0, s0 = index, []
    if has_terminal?('#', false, index)
      r1 = instantiate_node(SyntaxNode,input, index...(index + 1))
      @index += 1
    else
      terminal_parse_failure('#')
      r1 = nil
    end
    s0 << r1
    if r1
      s2, i2 = [], index
      loop do
        if index < input_length
          r3 = instantiate_node(SyntaxNode,input, index...(index + 1))
          @index += 1
        else
          terminal_parse_failure("any character")
          r3 = nil
        end
        if r3
          s2 << r3
        else
          break
        end
      end
      r2 = instantiate_node(SyntaxNode,input, i2...index, s2)
      s0 << r2
    end
    if s0.last
      r0 = instantiate_node(SyntaxNode,input, i0...index, s0)
      r0.extend(Comment0)
    else
      @index = i0
      r0 = nil
    end

    node_cache[:comment][start_index] = r0

    r0
  end

  module Askforelement0
    def space1
      elements[1]
    end

    def space2
      elements[3]
    end

    def declaration
      elements[4]
    end
  end

  def _nt_askforelement
    puts "askforelement #{node_cache[:statement]}"
    start_index = index
    if node_cache[:askforelement].has_key?(index)
      cached = node_cache[:askforelement][index]
      if cached
        cached = SyntaxNode.new(input, index...(index + 1)) if cached == true
        @index = cached.interval.end
      end
      return cached
    end

    i0, s0 = index, []
    if has_terminal?('give', false, index)
      r1 = instantiate_node(SyntaxNode,input, index...(index + 4))
      @index += 4
    else
      terminal_parse_failure('give')
      r1 = nil
    end
    s0 << r1
    if r1
      r2 = _nt_space
      s0 << r2
      if r2
        if has_terminal?('me', false, index)
          r3 = instantiate_node(SyntaxNode,input, index...(index + 2))
          @index += 2
        else
          terminal_parse_failure('me')
          r3 = nil
        end
        s0 << r3
        if r3
          r4 = _nt_space
          s0 << r4
          if r4
            r5 = _nt_declaration
            s0 << r5
          end
        end
      end
    end
    if s0.last
      r0 = instantiate_node(AskForElement,input, i0...index, s0)
      r0.extend(Askforelement0)
    else
      @index = i0
      r0 = nil
    end

    node_cache[:askforelement][start_index] = r0

    r0
  end

  module Declaration0
    def quantity
      elements[0]
    end

    def space
      elements[1]
    end

    def element
      elements[2]
    end
  end

  def _nt_declaration
    puts "declaration #{node_cache[:statement]}"
    start_index = index
    if node_cache[:declaration].has_key?(index)
      cached = node_cache[:declaration][index]
      if cached
        cached = SyntaxNode.new(input, index...(index + 1)) if cached == true
        @index = cached.interval.end
      end
      return cached
    end

    i0, s0 = index, []
    r1 = _nt_quantity
    s0 << r1
    if r1
      r2 = _nt_space
      s0 << r2
      if r2
        r3 = _nt_element
        s0 << r3
      end
    end
    if s0.last
      r0 = instantiate_node(Declaration,input, i0...index, s0)
      r0.extend(Declaration0)
    else
      @index = i0
      r0 = nil
    end

    node_cache[:declaration][start_index] = r0

    r0
  end

  def _nt_quantity
    puts "quantity #{node_cache[:statement]}"
    start_index = index
    if node_cache[:quantity].has_key?(index)
      cached = node_cache[:quantity][index]
      if cached
        cached = SyntaxNode.new(input, index...(index + 1)) if cached == true
        @index = cached.interval.end
      end
      return cached
    end

    i0 = index
    r1 = _nt_number
    if r1
      r0 = r1
    else
      r2 = _nt_numberword
      r2.extend(Quantity)
      if r2
        r0 = r2
      else
        @index = i0
        r0 = nil
      end
    end

    node_cache[:quantity][start_index] = r0

    r0
  end

  def _nt_numberword
    puts "numberword #{node_cache[:statement]}"
    start_index = index
    if node_cache[:numberword].has_key?(index)
      cached = node_cache[:numberword][index]
      if cached
        cached = SyntaxNode.new(input, index...(index + 1)) if cached == true
        @index = cached.interval.end
      end
      return cached
    end

    i0 = index
    r1 = _nt_singular
    if r1
      r0 = r1
    else
      r2 = _nt_plural
      r2.extend(NumberWord)
      if r2
        r0 = r2
      else
        @index = i0
        r0 = nil
      end
    end

    node_cache[:numberword][start_index] = r0

    r0
  end

  module Singular0
  end

  def _nt_singular
    puts "singular #{node_cache[:statement]}"
    start_index = index
    if node_cache[:singular].has_key?(index)
      cached = node_cache[:singular][index]
      if cached
        cached = SyntaxNode.new(input, index...(index + 1)) if cached == true
        @index = cached.interval.end
      end
      return cached
    end

    i0, s0 = index, []
    i1 = index
    if has_terminal?('a', false, index)
      r2 = instantiate_node(SyntaxNode,input, index...(index + 1))
      @index += 1
    else
      terminal_parse_failure('a')
      r2 = nil
    end
    if r2
      r1 = r2
    else
      if has_terminal?('one', false, index)
        r3 = instantiate_node(SyntaxNode,input, index...(index + 3))
        @index += 3
      else
        terminal_parse_failure('one')
        r3 = nil
      end
      if r3
        r1 = r3
      else
        @index = i1
        r1 = nil
      end
    end
    s0 << r1
    if r1
      if has_terminal?('single', false, index)
        r5 = instantiate_node(SyntaxNode,input, index...(index + 6))
        @index += 6
      else
        terminal_parse_failure('single')
        r5 = nil
      end
      if r5
        r4 = r5
      else
        r4 = instantiate_node(SyntaxNode,input, index...index)
      end
      s0 << r4
    end
    if s0.last
      r0 = instantiate_node(SingularNumberWord,input, i0...index, s0)
      r0.extend(Singular0)
    else
      @index = i0
      r0 = nil
    end

    node_cache[:singular][start_index] = r0

    r0
  end

  def _nt_plural
    puts "plural #{node_cache[:statement]}"
    start_index = index
    if node_cache[:plural].has_key?(index)
      cached = node_cache[:plural][index]
      if cached
        cached = SyntaxNode.new(input, index...(index + 1)) if cached == true
        @index = cached.interval.end
      end
      return cached
    end

    i0 = index
    if has_terminal?('two', false, index)
      r1 = instantiate_node(SyntaxNode,input, index...(index + 3))
      @index += 3
    else
      terminal_parse_failure('two')
      r1 = nil
    end
    if r1
      r0 = r1
    else
      if has_terminal?('three', false, index)
        r2 = instantiate_node(SyntaxNode,input, index...(index + 5))
        @index += 5
      else
        terminal_parse_failure('three')
        r2 = nil
      end
      if r2
        r0 = r2
      else
        if has_terminal?('four', false, index)
          r3 = instantiate_node(SyntaxNode,input, index...(index + 4))
          @index += 4
        else
          terminal_parse_failure('four')
          r3 = nil
        end
        if r3
          r0 = r3
        else
          if has_terminal?('five', false, index)
            r4 = instantiate_node(SyntaxNode,input, index...(index + 4))
            @index += 4
          else
            terminal_parse_failure('five')
            r4 = nil
          end
          if r4
            r0 = r4
          else
            if has_terminal?('six', false, index)
              r5 = instantiate_node(SyntaxNode,input, index...(index + 3))
              @index += 3
            else
              terminal_parse_failure('six')
              r5 = nil
            end
            if r5
              r0 = r5
            else
              if has_terminal?('seven', false, index)
                r6 = instantiate_node(SyntaxNode,input, index...(index + 5))
                @index += 5
              else
                terminal_parse_failure('seven')
                r6 = nil
              end
              if r6
                r0 = r6
              else
                if has_terminal?('eight', false, index)
                  r7 = instantiate_node(SyntaxNode,input, index...(index + 5))
                  @index += 5
                else
                  terminal_parse_failure('eight')
                  r7 = nil
                end
                if r7
                  r0 = r7
                else
                  if has_terminal?('nine', false, index)
                    r8 = instantiate_node(SyntaxNode,input, index...(index + 4))
                    @index += 4
                  else
                    terminal_parse_failure('nine')
                    r8 = nil
                  end
                  if r8
                    r0 = r8
                  else
                    if has_terminal?('ten', false, index)
                      r9 = instantiate_node(PluralNumberWord,input, index...(index + 3))
                      @index += 3
                    else
                      terminal_parse_failure('ten')
                      r9 = nil
                    end
                    if r9
                      r0 = r9
                    else
                      @index = i0
                      r0 = nil
                    end
                  end
                end
              end
            end
          end
        end
      end
    end

    node_cache[:plural][start_index] = r0

    r0
  end

  module Element0
    def adjective
      elements[0]
    end

    def space1
      elements[1]
    end

    def tag
      elements[2]
    end

    def space2
      elements[3]
    end

    def properties
      elements[4]
    end

    def space3
      elements[5]
    end

    def contents
      elements[6]
    end
  end

  def _nt_element
    puts "element #{node_cache[:statement]}"
    start_index = index
    if node_cache[:element].has_key?(index)
      cached = node_cache[:element][index]
      if cached
        cached = SyntaxNode.new(input, index...(index + 1)) if cached == true
        @index = cached.interval.end
      end
      return cached
    end

    i0, s0 = index, []
    r1 = _nt_adjective
    s0 << r1
    if r1
      r2 = _nt_space
      s0 << r2
      if r2
        r3 = _nt_tag
        s0 << r3
        if r3
          r4 = _nt_space
          s0 << r4
          if r4
            r5 = _nt_properties
            s0 << r5
            if r5
              r6 = _nt_space
              s0 << r6
              if r6
                r7 = _nt_contents
                s0 << r7
              end
            end
          end
        end
      end
    end
    if s0.last
      r0 = instantiate_node(Element,input, i0...index, s0)
      r0.extend(Element0)
    else
      @index = i0
      r0 = nil
    end

    node_cache[:element][start_index] = r0

    r0
  end

  module Adjective0
    def adjective1
      elements[0]
    end

    def space
      elements[3]
    end

    def adjective2
      elements[4]
    end
  end

  module Adjective1
    def adjective1
      elements[0]
    end

    def space1
      elements[1]
    end

    def space2
      elements[3]
    end

    def adjective2
      elements[4]
    end
  end

  def _nt_adjective
    puts "adjective #{node_cache[:statement]}"
    start_index = index
    if node_cache[:adjective].has_key?(index)
      cached = node_cache[:adjective][index]
      if cached
        cached = SyntaxNode.new(input, index...(index + 1)) if cached == true
        @index = cached.interval.end
      end
      return cached
    end

    i0 = index
    r1 = _nt_color
    if r1
      r0 = r1
    else
      r2 = _nt_size
      if r2
        r0 = r2
      else
        i3, s3 = index, []
        r4 = _nt_adjective
        s3 << r4
        if r4
          r6 = _nt_space
          if r6
            r5 = r6
          else
            r5 = instantiate_node(SyntaxNode,input, index...index)
          end
          s3 << r5
          if r5
            if has_terminal?(',', false, index)
              r7 = instantiate_node(SyntaxNode,input, index...(index + 1))
              @index += 1
            else
              terminal_parse_failure(',')
              r7 = nil
            end
            s3 << r7
            if r7
              r8 = _nt_space
              s3 << r8
              if r8
                r9 = _nt_adjective
                s3 << r9
              end
            end
          end
        end
        if s3.last
          r3 = instantiate_node(SyntaxNode,input, i3...index, s3)
          r3.extend(Adjective0)
        else
          @index = i3
          r3 = nil
        end
        if r3
          r0 = r3
        else
          i10, s10 = index, []
          r11 = _nt_adjective
          s10 << r11
          if r11
            r12 = _nt_space
            s10 << r12
            if r12
              if has_terminal?('and', false, index)
                r13 = instantiate_node(SyntaxNode,input, index...(index + 3))
                @index += 3
              else
                terminal_parse_failure('and')
                r13 = nil
              end
              s10 << r13
              if r13
                r14 = _nt_space
                s10 << r14
                if r14
                  r15 = _nt_adjective
                  s10 << r15
                end
              end
            end
          end
          if s10.last
            r10 = instantiate_node(Adjective,input, i10...index, s10)
            r10.extend(Adjective1)
          else
            @index = i10
            r10 = nil
          end
          if r10
            r0 = r10
          else
            @index = i0
            r0 = nil
          end
        end
      end
    end

    node_cache[:adjective][start_index] = r0

    r0
  end

  module Dimension0
    def metric
      elements[0]
    end

  end

  def _nt_dimension
    puts "dimension #{node_cache[:statement]}"
    start_index = index
    if node_cache[:dimension].has_key?(index)
      cached = node_cache[:dimension][index]
      if cached
        cached = SyntaxNode.new(input, index...(index + 1)) if cached == true
        @index = cached.interval.end
      end
      return cached
    end

    i0, s0 = index, []
    r1 = _nt_metric
    s0 << r1
    if r1
      i2 = index
      if has_terminal?('tall', false, index)
        r3 = instantiate_node(SyntaxNode,input, index...(index + 4))
        @index += 4
      else
        terminal_parse_failure('tall')
        r3 = nil
      end
      if r3
        r2 = r3
      else
        if has_terminal?('high', false, index)
          r4 = instantiate_node(SyntaxNode,input, index...(index + 4))
          @index += 4
        else
          terminal_parse_failure('high')
          r4 = nil
        end
        if r4
          r2 = r4
        else
          if has_terminal?('wide', false, index)
            r5 = instantiate_node(SyntaxNode,input, index...(index + 4))
            @index += 4
          else
            terminal_parse_failure('wide')
            r5 = nil
          end
          if r5
            r2 = r5
          else
            if has_terminal?('long', false, index)
              r6 = instantiate_node(SyntaxNode,input, index...(index + 4))
              @index += 4
            else
              terminal_parse_failure('long')
              r6 = nil
            end
            if r6
              r2 = r6
            else
              @index = i2
              r2 = nil
            end
          end
        end
      end
      s0 << r2
    end
    if s0.last
      r0 = instantiate_node(Dimension,input, i0...index, s0)
      r0.extend(Dimension0)
    else
      @index = i0
      r0 = nil
    end

    node_cache[:dimension][start_index] = r0

    r0
  end

  def _nt_metric
    puts "metric #{node_cache[:statement]}"
    start_index = index
    if node_cache[:metric].has_key?(index)
      cached = node_cache[:metric][index]
      if cached
        cached = SyntaxNode.new(input, index...(index + 1)) if cached == true
        @index = cached.interval.end
      end
      return cached
    end

    i0 = index
    r1 = _nt_size
    if r1
      r0 = r1
    else
      r2 = _nt_percent
      r2.extend(Metric)
      if r2
        r0 = r2
      else
        @index = i0
        r0 = nil
      end
    end

    node_cache[:metric][start_index] = r0

    r0
  end

  def _nt_color
    puts "color #{node_cache[:statement]}"
    start_index = index
    if node_cache[:color].has_key?(index)
      cached = node_cache[:color][index]
      if cached
        cached = SyntaxNode.new(input, index...(index + 1)) if cached == true
        @index = cached.interval.end
      end
      return cached
    end

    i0 = index
    r1 = _nt_color_word
    if r1
      r0 = r1
    else
      r2 = _nt_rgb
      if r2
        r0 = r2
      else
        r3 = _nt_hsl
        if r3
          r0 = r3
        else
          r4 = _nt_hex
          r4.extend(Color)
          if r4
            r0 = r4
          else
            @index = i0
            r0 = nil
          end
        end
      end
    end

    node_cache[:color][start_index] = r0

    r0
  end

  module Properties0
    def space
      elements[1]
    end

    def property
      elements[2]
    end
  end

  module Properties1
    def space1
      elements[0]
    end

    def space2
      elements[2]
    end

    def property
      elements[3]
    end
  end

  module Properties2
  end

  module Properties3
    def space
      elements[1]
    end

    def property
      elements[3]
    end

  end

  def _nt_properties
    puts "properties #{node_cache[:statement]}"
    start_index = index
    if node_cache[:properties].has_key?(index)
      cached = node_cache[:properties][index]
      if cached
        cached = SyntaxNode.new(input, index...(index + 1)) if cached == true
        @index = cached.interval.end
      end
      return cached
    end

    i0, s0 = index, []
    i1 = index
    if has_terminal?('that', false, index)
      r2 = instantiate_node(SyntaxNode,input, index...(index + 4))
      @index += 4
    else
      terminal_parse_failure('that')
      r2 = nil
    end
    if r2
      r1 = r2
    else
      if has_terminal?('which', false, index)
        r3 = instantiate_node(SyntaxNode,input, index...(index + 5))
        @index += 5
      else
        terminal_parse_failure('which')
        r3 = nil
      end
      if r3
        r1 = r3
      else
        @index = i1
        r1 = nil
      end
    end
    s0 << r1
    if r1
      r4 = _nt_space
      s0 << r4
      if r4
        if has_terminal?('is', false, index)
          r5 = instantiate_node(SyntaxNode,input, index...(index + 2))
          @index += 2
        else
          terminal_parse_failure('is')
          r5 = nil
        end
        s0 << r5
        if r5
          r6 = _nt_property
          s0 << r6
          if r6
            i7, s7 = index, []
            s8, i8 = [], index
            loop do
              i9, s9 = index, []
              if has_terminal?(',', false, index)
                r10 = instantiate_node(SyntaxNode,input, index...(index + 1))
                @index += 1
              else
                terminal_parse_failure(',')
                r10 = nil
              end
              s9 << r10
              if r10
                r11 = _nt_space
                s9 << r11
                if r11
                  r12 = _nt_property
                  s9 << r12
                end
              end
              if s9.last
                r9 = instantiate_node(SyntaxNode,input, i9...index, s9)
                r9.extend(Properties0)
              else
                @index = i9
                r9 = nil
              end
              if r9
                s8 << r9
              else
                break
              end
            end
            r8 = instantiate_node(SyntaxNode,input, i8...index, s8)
            s7 << r8
            if r8
              s13, i13 = [], index
              loop do
                i14, s14 = index, []
                r15 = _nt_space
                s14 << r15
                if r15
                  if has_terminal?('and', false, index)
                    r16 = instantiate_node(SyntaxNode,input, index...(index + 3))
                    @index += 3
                  else
                    terminal_parse_failure('and')
                    r16 = nil
                  end
                  s14 << r16
                  if r16
                    r17 = _nt_space
                    s14 << r17
                    if r17
                      r18 = _nt_property
                      s14 << r18
                    end
                  end
                end
                if s14.last
                  r14 = instantiate_node(SyntaxNode,input, i14...index, s14)
                  r14.extend(Properties1)
                else
                  @index = i14
                  r14 = nil
                end
                if r14
                  s13 << r14
                else
                  break
                end
              end
              r13 = instantiate_node(SyntaxNode,input, i13...index, s13)
              s7 << r13
            end
            if s7.last
              r7 = instantiate_node(SyntaxNode,input, i7...index, s7)
              r7.extend(Properties2)
            else
              @index = i7
              r7 = nil
            end
            s0 << r7
          end
        end
      end
    end
    if s0.last
      r0 = instantiate_node(Properties,input, i0...index, s0)
      r0.extend(Properties3)
    else
      @index = i0
      r0 = nil
    end

    node_cache[:properties][start_index] = r0

    r0
  end

  def _nt_property
    puts "property #{node_cache[:statement]}"
    start_index = index
    if node_cache[:property].has_key?(index)
      cached = node_cache[:property][index]
      if cached
        cached = SyntaxNode.new(input, index...(index + 1)) if cached == true
        @index = cached.interval.end
      end
      return cached
    end

    i0 = index
    r1 = _nt_color
    if r1
      r0 = r1
    else
      r2 = _nt_dimension
      r2.extend(Property)
      if r2
        r0 = r2
      else
        @index = i0
        r0 = nil
      end
    end

    node_cache[:property][start_index] = r0

    r0
  end

  module Contents0
    def space
      elements[1]
    end

  end

  module Contents1
    def space
      elements[1]
    end

  end

  module Contents2
    def space1
      elements[1]
    end

    def declaration
      elements[2]
    end

    def space2
      elements[3]
    end

  end

  def _nt_contents
    puts "contents #{node_cache[:statement]}"
    start_index = index
    if node_cache[:contents].has_key?(index)
      cached = node_cache[:contents][index]
      if cached
        cached = SyntaxNode.new(input, index...(index + 1)) if cached == true
        @index = cached.interval.end
      end
      return cached
    end

    i0, s0 = index, []
    i1 = index
    if has_terminal?('containing', false, index)
      r2 = instantiate_node(SyntaxNode,input, index...(index + 10))
      @index += 10
    else
      terminal_parse_failure('containing')
      r2 = nil
    end
    if r2
      r1 = r2
    else
      if has_terminal?('holding', false, index)
        r3 = instantiate_node(SyntaxNode,input, index...(index + 7))
        @index += 7
      else
        terminal_parse_failure('holding')
        r3 = nil
      end
      if r3
        r1 = r3
      else
        i4, s4 = index, []
        if has_terminal?('that', false, index)
          r5 = instantiate_node(SyntaxNode,input, index...(index + 4))
          @index += 4
        else
          terminal_parse_failure('that')
          r5 = nil
        end
        s4 << r5
        if r5
          r6 = _nt_space
          s4 << r6
          if r6
            if has_terminal?('has', false, index)
              r7 = instantiate_node(SyntaxNode,input, index...(index + 3))
              @index += 3
            else
              terminal_parse_failure('has')
              r7 = nil
            end
            s4 << r7
          end
        end
        if s4.last
          r4 = instantiate_node(SyntaxNode,input, i4...index, s4)
          r4.extend(Contents0)
        else
          @index = i4
          r4 = nil
        end
        if r4
          r1 = r4
        else
          if has_terminal?('with', false, index)
            r8 = instantiate_node(SyntaxNode,input, index...(index + 4))
            @index += 4
          else
            terminal_parse_failure('with')
            r8 = nil
          end
          if r8
            r1 = r8
          else
            @index = i1
            r1 = nil
          end
        end
      end
    end
    s0 << r1
    if r1
      r9 = _nt_space
      s0 << r9
      if r9
        r10 = _nt_declaration
        s0 << r10
        if r10
          r11 = _nt_space
          s0 << r11
          if r11
            i13, s13 = index, []
            i14 = index
            if has_terminal?('in', false, index)
              r15 = instantiate_node(SyntaxNode,input, index...(index + 2))
              @index += 2
            else
              terminal_parse_failure('in')
              r15 = nil
            end
            if r15
              r14 = r15
            else
              if has_terminal?('inside', false, index)
                r16 = instantiate_node(SyntaxNode,input, index...(index + 6))
                @index += 6
              else
                terminal_parse_failure('inside')
                r16 = nil
              end
              if r16
                r14 = r16
              else
                @index = i14
                r14 = nil
              end
            end
            s13 << r14
            if r14
              r17 = _nt_space
              s13 << r17
              if r17
                if has_terminal?('it', false, index)
                  r18 = instantiate_node(SyntaxNode,input, index...(index + 2))
                  @index += 2
                else
                  terminal_parse_failure('it')
                  r18 = nil
                end
                s13 << r18
              end
            end
            if s13.last
              r13 = instantiate_node(SyntaxNode,input, i13...index, s13)
              r13.extend(Contents1)
            else
              @index = i13
              r13 = nil
            end
            if r13
              r12 = r13
            else
              r12 = instantiate_node(SyntaxNode,input, index...index)
            end
            s0 << r12
          end
        end
      end
    end
    if s0.last
      r0 = instantiate_node(Contents,input, i0...index, s0)
      r0.extend(Contents2)
    else
      @index = i0
      r0 = nil
    end

    node_cache[:contents][start_index] = r0

    r0
  end

  def _nt_color_word
    puts "color_word #{node_cache[:statement]}"
    start_index = index
    if node_cache[:color_word].has_key?(index)
      cached = node_cache[:color_word][index]
      if cached
        cached = SyntaxNode.new(input, index...(index + 1)) if cached == true
        @index = cached.interval.end
      end
      return cached
    end
